# UltraGpuImage

./: .gitignore  README.md  build.gradle  collect_src.sh  settings.gradle  setup_xcode_project.sh
UltraGpuImage/: project.yml
UltraGpuImage-Android/: CMakeLists.txt  build.gradle
UltraGpuImage-Android/src/main/: AndroidManifest.xml
UltraGpuImage-Android/src/main/cpp/: ultra_gpu_image_filters_jni.cpp  ultra_gpu_image_jni.cpp
UltraGpuImage-Android/src/main/java/com/piasy/ugi/: UgiFilter.java  UgiRenderer.java  UgiRendererView.java  UgiTextureView.java  UgiTransformation.java
UltraGpuImage-Android/src/main/java/com/piasy/ugi/egl/: EglBase.java  EglBase10.java  EglBase14.java
UltraGpuImage-Android/src/main/java/com/piasy/ugi/filters/: UgiBrightnessFilter.java  UgiColorInvertFilter.java  UgiFilterGroup.java  UgiPreprocessFilter.java
UltraGpuImage-Android/src/main/java/com/piasy/ugi/utils/: Logging.java  ThreadUtils.java
UltraGpuImage-iOS/: module.modulemap  project.yml
UltraGpuImage-iOS/src/: Info.plist  UgiFilter.h  UgiLogging.h  UgiLogging.m  UgiRenderer.h  UgiRenderer.mm  UgiRendererView.h  UgiRendererView.m  UgiTransformation+Native.h  UgiTransformation.h  UgiTransformation.mm  UltraGpuImage_iOS.h
UltraGpuImage.xcworkspace/: contents.xcworkspacedata
UltraGpuImage/src/: ugi_filter.cpp  ugi_filter.h  ugi_gl.h  ugi_gl_utils.cpp  ugi_gl_utils.h  ugi_logging.cpp  ugi_logging.h  ugi_renderer.cpp  ugi_renderer.h  ugi_transformation.cpp  ugi_transformation.h
app/: build.gradle
iOSExample/: Podfile  project.yml
iOSExample/iOSExample/: AppDelegate.h  (+5 more)
(+30 files in other folders)
